force-app/src/objects/ffr__InquiryTemplateColumnFilter__c.object
<CustomObject>
    <description>Stores the expression that determines what data is retrieved in a column when running an action view.</description>
    <fields>
        <fullName>ffr__ClosingBrackets__c</fullName>
        <label>Closing Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__CombineType__c</fullName>
        <label>Combine Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>And</fullName>
                </value>
                <value>
                    <fullName>Or</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__DataViewField__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Field</label>
        <referenceTo>ffr__DataViewField__c</referenceTo>
        <relationshipLabel>Action View Template Column Filters</relationshipLabel>
        <relationshipName>InquiryTemplateColumnFilters</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffr__From__c</fullName>
        <label>From</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffr__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__InquiryTemplateColumn__c</fullName>
        <label>Action View Template Column</label>
        <referenceTo>ffr__InquiryTemplateColumn__c</referenceTo>
        <relationshipLabel>Action View Template Column Filters</relationshipLabel>
        <relationshipName>InquiryTemplateColumnFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__OpeningBrackets__c</fullName>
        <label>Opening Brackets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffr__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&lt;&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>in range</fullName>
                </value>
                <value>
                    <fullName>not in range</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__Prompt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prompt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffr__To__c</fullName>
        <label>To</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Action View Template Column Filter</label>
    <nameField>
        <displayFormat>ITCF-{00000000}</displayFormat>
        <label>Column Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action View Template Column Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>